--- a/css/styles.css
+++ b/css/styles.css
@@ -1677,3 +1677,22 @@ td {
 .radinput:checked {
     border: 6px solid black;
 }
+.myForm {
+    margin-left: 50px;
+}
+.cont-form {
+    display: block;
+
+    width: 50%;
+    height: 40px;
+
+    font-size: 18px;
+
+    transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cont-form:focus-visible {
+    border: 1px solid #9a748b;
+    border-radius: 4px;
+    outline: none;
+}
